2010-09-14  Mihai Parparita  <mihaip@chromium.org>

        Reviewed by Tony Chang.

        blob: URL scheme does not work with Chromium DRT
        https://bugs.webkit.org/show_bug.cgi?id=45772

        Roll Chromium forward to r59406, which registers the blob
        URL scheme for the Chromium DRT too.

        * DEPS:

2010-09-14  Jian Li  <jianli@chromium.org>

        Reviewed by David Levin.

        fast/files/apply-blob-url-to-img.html timeout on Leopard
        https://bugs.webkit.org/show_bug.cgi?id=45576

        * src/ResourceHandle.cpp: Remove the no longer applicable static comment.

2010-09-14  Chris Guillory   <chris.guillory@google.com>

        Reviewed by Chris Fleizach.

        Send all accessibility notifications to Chromium.
        https://bugs.webkit.org/show_bug.cgi?id=45156
        
        Use postAccessibilityNotification to pass accessibility notifications
        to chromium.

        * WebKit.gyp:
        * public/WebAccessibilityNotification.h: Added.
        * public/WebViewClient.h:
        (WebKit::WebViewClient::postAccessibilityNotification):
        * src/AssertMatchingEnums.h: Added.
        * src/ChromeClientImpl.cpp:
        (WebKit::toWebAccessibilityNotification):
        (WebKit::ChromeClientImpl::didChangeAccessibilityObjectChildren):
        (WebKit::ChromeClientImpl::postAccessibilityNotification):
        * src/ChromeClientImpl.h:

2010-09-14  Tony Chang  <tony@chromium.org>

        Unreviewed, fix chromium win compile.

        * public/WebView.h:

2010-09-14  Tony Chang  <tony@chromium.org>

        Reviewed by Dimitri Glazkov.

        [chromium] implement layoutTestController.setDomainRelaxationForbiddenForURLScheme
        https://bugs.webkit.org/show_bug.cgi?id=45762

        * public/WebView.h: add WebView::setDomainRelaxationForbidden
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::setDomainRelaxationForbidden):
        * src/WebViewImpl.h:

2010-09-14  Yury Semikhatsky  <yurys@chromium.org>
