@@ -55,11 +55,6 @@ WEBKIT_API WebKitClient* webKitClient();
 WEBKIT_API void setLayoutTestMode(bool);
 WEBKIT_API bool layoutTestMode();
 
-// This is a temporary flag while we try to get Linux to match Windows'
-// checksum computation.  It specifies whether or not the baseline images
-// should be opaque or not.
-WEBKIT_API bool areLayoutTestImagesOpaque();
-
 // Enables the named log channel.  See WebCore/platform/Logging.h for details.
 WEBKIT_API void enableLogChannel(const char*);
 
