@@ -103,11 +103,6 @@ bool layoutTestMode()
     return s_layoutTestMode;
 }
 
-bool areLayoutTestImagesOpaque()
-{
-    return true;
-}
-
 void enableLogChannel(const char* name)
 {
     WTFLogChannel* channel = WebCore::getChannelFromName(name);
