@@ -1,3 +1,13 @@
+2010-09-14  Tony Chang  <tony@chromium.org>
+
+        Reviewed by Ojan Vafai.
+
+        [chromium] Remove WebKit::areLayoutTestImagesOpaque since it's no longer needed
+        https://bugs.webkit.org/show_bug.cgi?id=45768
+
+        * DumpRenderTree/chromium/TestShell.cpp:
+        (TestShell::dumpImage): new baselines are checked in and Linux will match Windows going forward.
+
 2010-09-14  Kevin Ollivier  <kevino@theolliviers.com>
 
         [wx] Build fix, add newly added directories to the directory list.
