@@ -1,3 +1,13 @@
+2010-09-14  Tony Chang  <tony@chromium.org>
+
+        Reviewed by Ojan Vafai.
+
+        [chromium] Remove WebKit::areLayoutTestImagesOpaque since it's no longer needed
+        https://bugs.webkit.org/show_bug.cgi?id=45768
+
+        * public/WebKit.h:
+        * src/WebKit.cpp:
+
 2010-09-14  Mihai Parparita  <mihaip@chromium.org>
 
         Reviewed by Tony Chang.
